# D100-D400_credit_prediction

./: README.md  environment.yml  pyproject.toml  setup.cfg
data/: __init__.py  _cleaning.py  _load_data.py  cleaned_data.parquet  corporate_rating.csv  eda_cleaning.ipynb  plotting.py
model/: __init__.py  _evaluation.py  _learning_curve.py  _model_training.py  feature_importance_PDP.py  main.py  splitting.py
preprocessing/: __init__.py  _preprocessing.py  feature_engineering.py
tests/: test_feature_engineering.py
