[metadata]
name = credit_rating
version = 0.1.0
description = D100&D400 project on credit predicting, university of cambridge
long_description = file: README.md
long_description_content_type = text/markdown
author = Chuqing(Celia) Xi
author_email = xicelia962@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Machine Learning

[options]
include_package_data = true
python_requires = >=3.8
packages = find:
install_requires =
    pandas
    numpy
    scikit-learn
    lightgbm
    dalex
    fastparquet
    matplotlib
    seaborn
    pytest
    pre-commit

[options.package_data]
credit_rating =
    data/*.parquet
    data/*.csv

[options.entry_points]
console_scripts =
    credit-rating = credit_rating.main:main

[options.extras_require]
dev =
    black
    isort
    pytest
    pre-commit
docs =
    sphinx
    myst-parser
    furo

[options.packages.find]
include =
    credit_rating
